[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "toot-tooi"
authors = [{ name="Ivan Habunek", email="ivan@habunek.com" }]
description = "Mastodon terminal user interface"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dynamic = ["version"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    # TODO: versions
    "beautifulsoup4",
    "click",
    "httpx",
    "html2text",
    "textual>=0.38.1",
    "tomlkit",
    "pillow",
    "aiohttp",
    "aiodns",
]

[tool.setuptools]
packages = [
    "tooi",
    "tooi.api",
    "tooi.data",
    "tooi.screens",
    "tooi.tabs",
    "tooi.utils",
    "tooi.widgets",
]

[tool.setuptools_scm]

[tool.setuptools.package-data]
tooi = ["app.css"]

[project.optional-dependencies]
dev = [
    "build",
    "flake8",
    "mypy",
    "pyright",
    "textual-dev",
    "twine",
    "types-beautifulsoup4",
    "vermin",
]

[project.urls]
"Homepage" = "https://git.sr.ht/~ihabunek/tooi"

[project.scripts]
tooi = "tooi.cli:main"

[tool.pyright]
include = ["tooi"]
typeCheckingMode = "strict"
